Add UserModule; improve customer admin & CORS
Add a new UserModule React component with full CRUD UI (add/edit, deactivate/reactivate, show deactivated) and admin-only controls. Integrate UserModule into AdminDashboard and import it. Enhance CustomerModule with edit support, deactivate/reactivate flows, show deactivated toggle, improved image handling, form field safety (fallbacks for undefined), and UI/label tweaks. Update backend CORS config to allow additional localhost ports and include PATCH in allowed HTTP methods to support status toggles.